# MindGraph

./: .cursorignore  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  AGENTS.md  BACK_BUTTON_FIX_CODE_REVIEW.md  BATCH_CONVERSION_CODE_REVIEW.md  BCRYPT_FIX_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CODE_REVIEW_PASSWORD_HASHING.md  DEMO_MODE_FIX_SUMMARY.md  DEPLOYMENT.md  FASTAPI_MIGRATION_PLAN.md  FIX_DEMO_LOGIN.md  MIGRATION_COMPLETE.md  MINDMATE_AI_DEBUG_GUIDE.md  MULTI_LLM_BUG_FIX_SUMMARY.md  MULTI_LLM_CODE_REVIEW_SUMMARY.md  MULTI_LLM_DETAILED_CODE_REVIEW.md  NOTICE  NOTIFICATION_SYSTEM_REFACTOR.md  PROJECT_STRUCTURE.md  README.md  SMS_CODE_REVIEW.md  TESTING_GUIDE.md  VERSION  VERSION_UPDATE_SUMMARY.md  WIKI.md  agent.py  agent_utils.py  api_routes.py  app.py  async_dify_client.py  brace_map_agent.py  browser_manager.py  browser_pool.py  celery_app.py  (+36 more)
.cursor/: Dockerfile  branch-move-layout-root-cause.md  branch-move-root-cause-analysis.md  environment.json  mindmap-autocomplete-persistence-root-cause.md
agents/: __init__.py  main_agent.py
alembic/: README.md  env.py  migration_support.py  rls_functions_sql.py  rls_policy_builder.py  (+1 more)
esp32/firmware/main/: CMakeLists.txt  asset_manager.cpp  font_manager.cpp  i2c_bus_manager.cpp  i2c_bus_manager.h  idf_component.yml  launcher.cpp  launcher.h  loading_screen.cpp  loading_screen.h  main.cpp  sd_storage.cpp  sd_storage.h  standby_screen.cpp  standby_screen.h  ui_manager.cpp  wifi_manager.cpp
esp32/firmware/main/apps/: dify_app.cpp  dify_app.h  smart_response_app.cpp  smart_response_app.h
(+5388 files in other folders)
