idf_component_register(
    SRCS 
        "main.cpp"
        "audio_handler.cpp"
        "battery_manager.cpp"
        "button_handler.cpp"
        "config_manager.cpp"
        "echo_cancellation.cpp"
        "font_manager.cpp"
        "asset_manager.cpp"
        "i2c_bus_manager.cpp"
        "launcher.cpp"
        "loading_screen.cpp"
        "motion_sensor.cpp"
        "rtc_manager.cpp"
        "sd_storage.cpp"
        "standby_screen.cpp"
        "ui_manager.cpp"
        "ui_icons.cpp"
        "wallpaper_manager.cpp"
        "qrcode_generator.cpp"
        "websocket_client.cpp"
        "wifi_manager.cpp"
        "apps/smart_response_app.cpp"
        "apps/dify_app.cpp"
        "fonts/chinese_font_16.c"
    INCLUDE_DIRS 
        "."
        "apps"
        "../components"
    PRIV_REQUIRES 
        nvs_flash
        esp_wifi
        esp_http_client
        esp_https_ota
        mbedtls
        driver
        esp_driver_i2c
        esp_timer
        spi_flash
        spiffs
        fatfs
        lvgl__lvgl
        json
)
